Correct z-index for filter listbox

--- a/src/main/resources/assets/admin/common/styles/api/ui/selector/list/filterable-listbox-wrapper.less
+++ b/src/main/resources/assets/admin/common/styles/api/ui/selector/list/filterable-listbox-wrapper.less
@@ -16,7 +16,6 @@
       text-align: center;
       padding: 0;
       background-color: @form-button-bg;
-      z-index: 1;
     }
 
     .@{_COMMON_PREFIX}dropdown-handle {
@@ -31,7 +30,7 @@
     position: absolute;
     width: 100%;
     background-color: @admin-white;
-    z-index: 1;
+    z-index: 2;
     border: 1px solid @admin-medium-gray-border;
     border-top: none;
     box-shadow: 2px 2px 2px @admin-medium-gray-border;
